--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         perferendis ex. Enim dignissimos totam cupiditate pariatur nobis voluptatibus veniam, optio unde, voluptas amet
         ut accusamus.</p>
 
+    <p class="article-one">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime esse officiis
+        ad, ea laborum
+        perferendis ex. Enim dignissimos totam cupiditate pariatur nobis voluptatibus veniam, optio unde,
+        voluptas amet
+        ut accusamus.</p>
+
 </body>
+
 
 </html>
