--- a/index.html
+++ b/index.html
@@ -12,16 +12,7 @@
 
 <body>
     <h1>Hello Practice!</h1>
-
-
-    <p class="article-one">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime esse officiis
-        ad, ea laborum
-        perferendis ex. Enim dignissimos totam cupiditate pariatur nobis voluptatibus veniam, optio unde,
-        voluptas amet
-        ut accusamus.</p>
-    <section></section>
-
+    <p>adadadadsddfdfsfs-dfsfsfsss</p>
 </body>
-
 
 </html>
